# llm-ex01

./: .gitignore  .python-version  agent.py  company_chat.py  fetch_lotto.py  law_chat.py  law_chat_prompts.md  pdf_embeding.py  pdf_reader.py  pdf_retriver.py  pdf_retriver_st.py  pdf_retriver_st_persist.py  providers.json  pyproject.toml  rag_st.py  rag_st_02.py  rag_st_03.py  rag_st_04.py  requirements.txt  streamlit_app.py
.streamlit/: secrets.toml.example
tabs/: chat.py  lotto.py  python_tutor.py
