[project]
name = "llm-ex01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.4",
    "langchain-core>=1.4.2",
    "langchain-google-genai>=4.2.4",
    "langchain-openai>=1.2.2",
    "streamlit>=1.58.0",
    "streamlit-ace>=0.1.1",
]
