[project]
name = "llm-ex01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.4",
    "langchain-text-splitters>=0.3.0",
    "pypdf>=5.0.0",
    "langchain-core>=1.4.2",
    "langchain-google-genai>=4.2.4",
    "langchain-openai>=1.2.2",
    "streamlit>=1.58.0",
    "streamlit-ace>=0.1.1",
    "python-dotenv>=1.2.2",
    "langchain-chroma>=1.1.0",
    "protobuf<4",
    "langchain-community>=0.4.2",
    "langchain-classic>=1.0.7",
]
